# open-dashboard-next

./: .env.example  .gitignore  CLAUDE.md  PATTERNS.md  PORTING.md  README.md  README.zh-CN.md  ROADMAP.md  biome.json  components.json  docker-compose.yml  drizzle.config.ts  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts  wrangler.jsonc
.claude-plugin/: marketplace.json
.claude/agents/: project-architect.md
.claude/commands/: add-resource.md  port.md
.claude/skills/add-backend/templates/fastapi-sqlalchemy-jwt/: README.md  pyproject.toml
.claude/skills/add-backend/templates/fastapi-sqlalchemy-jwt/app/: auth.py  config.py  db.py  models.py  schemas.py
.claude/skills/add-backend/templates/fastapi-sqlalchemy-jwt/app/routers/: auth.py  products.py
.claude/skills/add-backend/templates/fastapi-sqlalchemy-jwt/migrations/: env.py
.claude/skills/add-backend/templates/fastapi-sqlalchemy-jwt/migrations/versions/: 0001_initial.py
.claude/skills/add-backend/templates/fastapi-sqlalchemy-jwt/tests/: test_auth.py  test_products.py
backends/: CONTRACT.md  README.md
backends/fastapi-sqlalchemy-jwt/: .env.example  README.md  alembic.ini
backends/hono-drizzle-authjs/: .env.example  README.md
backends/hono-prisma-betterauth/: README.md  package.json
backends/tanstack-drizzle-betterauth/: .env.example  README.md
docs/: backends.md  deploy-cloudflare.md  gallery-catalogue.md
drizzle/: 0000_bright_gorgon.sql  0001_dashing_domino.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
scripts/: build-base.ts  create-resource.ts  seed.ts  strip-demo.ts  sync-skills.ts
src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  providers.tsx
src/components/: CommandMenu.tsx  DashboardShell.tsx  FloatingActionMenu.tsx  GlobalSearch.tsx  Header.tsx  NotificationButton.tsx  Sidebar.tsx  UserAvatar.tsx  providers.tsx
src/db/: index.ts  schema.ts
src/features/: scenarios-data.test.ts  scenarios-schema.test.ts
src/lib/: auth-client.ts  auth-provider.ts  (+5 more)
(+321 files in other folders)
